--- a/assets/css/sass/colors.scss
+++ b/assets/css/sass/colors.scss
@@ -3,5 +3,10 @@
 $primary-color: #2a5db0;
 $link: #2a5db0;
 $link-hover: darken($link, 20%);
-$grey: #999;
-$light-grey: #CCC;
+$brown: #72625a;
+$light-brown: #c2a99d;
+$light-grey: #d4d4d4;
+$street-shadow: #cdbcb4;
+$turquoise: #0aa;
+$orange: #ff9944;
+$light-yellow: #a5894a;
