--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -1,12 +1,18 @@
 /*
-Name: Google News SASS
+Name: Toll Fee Calculator SASS
 Version: 1.0
 */
 
 @import "colors.scss"; /*Colors SASS file*/
 @import "mixin.scss"; /*Mixin SASS file*/
 @import "fonts.scss"; /*Fonts SASS file*/
+@import "background.scss"; /*Nature Background SASS file*/
 @import "header.scss"; /*Header SASS file*/
+@import "car.scss"; /*Car SASS file*/
+
+body,html{
+  height: 100%;
+}
 
 body {
   width: 100%;
@@ -18,6 +24,16 @@ body {
 	font-family:$primary-font;
 	font-size:13pt;
 	color:black;
+  background: rgb(209,228,234);
+  background: -moz-radial-gradient(center, ellipse cover,  rgba(209,228,234,1) 0%, rgba(186,228,244,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(209,228,234,1)), color-stop(100%,rgba(186,228,244,1)));
+  background: -webkit-radial-gradient(center, ellipse cover,  rgba(209,228,234,1) 0%,rgba(186,228,244,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover,  rgba(209,228,234,1) 0%,rgba(186,228,244,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover,  rgba(209,228,234,1) 0%,rgba(186,228,244,1) 100%);
+  background: radial-gradient(ellipse at center,  rgba(209,228,234,1) 0%,rgba(186,228,244,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d1e4ea', endColorstr='#bae4f4',GradientType=1 );
+	padding:0;
+	margin:0;
 }
 
 @media screen and (max-width : 1024px) {
@@ -37,7 +53,6 @@ body {
 
 	body {
 		margin: 0 0 20px;
-		height:auto;
 		min-height:100%;
 	}
 }
