--- a/assets/css/sass/colors.scss
+++ b/assets/css/sass/colors.scss
@@ -5,6 +5,7 @@ $link: #2a5db0;
 $link-hover: darken($link, 20%);
 $brown: #72625a;
 $light-brown: #c2a99d;
+$grey: #333;
 $light-grey: #d4d4d4;
 $street-shadow: #cdbcb4;
 $turquoise: #0aa;
