--- a/assets/css/sass/car.scss
+++ b/assets/css/sass/car.scss
@@ -8,16 +8,45 @@
   -moz-animation:myfirst 10s  linear infinite;
   -webkit-animation:myfirst 10s  linear infinite;
 }
-@-moz-keyframes myfirst
-{
+
+@-moz-keyframes myfirst {
 	0%   {left:-25%;}
 	100% {left:100%;}
 }
-@-webkit-keyframes myfirst
-{
+
+@-webkit-keyframes myfirst{
 	0%   {left:-25%;}
 	100% {left:100%;}
 }
+
+.info-bubble {
+    position: absolute;
+    background: white;
+    border-radius: .4em;
+    height: 170px;
+    top: -220px;
+    width: 200px;
+    padding: 15%;
+    box-sizing: border-box;
+		transition: all .6s;
+		opacity: 0;
+
+		&:after {
+			content: '';
+	    position: absolute;
+	    bottom: 0;
+	    left: 50%;
+	    width: 0;
+	    height: 0;
+	    border: 20px solid transparent;
+	    border-top-color: white;
+	    border-bottom: 0;
+	    border-left: 0;
+	    margin-left: -10px;
+	    margin-bottom: -20px;
+		}
+}
+
 .tyre {
 	width:30px;
 	height:30px;
